<resources>
    <string name="app_name">Coffee Night</string>

    <string name="title">Coffee Night</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Price Menu</string>
    <string name="quantity">Quantity</string>
    <string name="price">PRICE</string>
    <string name="order">Order</string>
    <string name="total">Total</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="number">2</string>
    <string name="number2">$ 10.00</string>

    <string name="like">¿Que es lo que más te gustó de nuestro café?</string>
    <string name="like_sum">Nos gustaría conocer tu opinión sobre nuestro negocio,
        por favor responde esta pequeña encuesta.</string>
    <string name="like_default">1</string>


    <string name="like_comment">Insert a Comment</string>
    <string name="like_comment_title">Envienos sus comentarios</string>
    <string name="like_comment_sum">Su opinión es muy importante</string>
    <string name="like_options">Elija que le gustó de nuestro local</string>

    <string name="category_title">ENCUESTA</string>
    <string name="messageus_title">WRITE US</string>

    <string name="main_settings_title">SETTINGS</string>

</resources>
