<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="40dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textColor="#3e5f80"
                    android:textDirection="rtl"
                    android:textSize="24dp" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:onClick="decrement"
                        android:text="@string/minus"
                        android:textSize="20dp" />

                <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/number"
                        android:textSize="20dp" />

                <Button
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:onClick="increment"
                        android:text="@string/plus"
                        android:textSize="20dp" />

            </LinearLayout>


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/price"
                    android:textSize="24dp" />


            <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text=""
                    android:textSize="24dp" />


            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="order"
                    android:text="@string/order"
                    android:textSize="20dp" />


            <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/coffeenight" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
